use gunichar consistently

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@
 /nbproject/private/configurations.xml
 /nbproject/configurations.xml
 /nbproject/private/tools/localhost/MinGW/gcc.exe
+/pkg/
+/nbproject/private/Default-exec.log
+/nbproject/private/Default.properties
+/nbproject/private/CodeAssistancePathMapper.properties
+/nbproject/private/Default-build.log
+/PKGBUILD
