--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,12 +13,20 @@ AM_CPPFLAGS = \
 	$(EPOXY_CFLAGS)
 
 libgenericglm_la_CFLAGS = \
-	-std=c17 -Wall -pedantic
+	-Wall \
+	-Wextra \
+	-Wconversion \
+	-pedantic
 
 lib_LTLIBRARIES = libgenericglm.la
 
+# excluded unused as this gets annoying
+# not using -Wconversion as i did not make use of casts ...at the time it was feasible
 libgenericglm_la_CXXFLAGS = \
-	-Wall -pedantic
+	-Wall \
+	-Wextra \
+	-Wno-unused-parameter \
+	-pedantic
 
 libgenericglm_la_LDFLAGS = \
 	@EXTRA_LDFLAGS@ \
@@ -55,7 +63,25 @@ libgenericglm_la_SOURCES = \
 	TextTreeGeometry.cpp \
 	Buffer.cpp \
 	Diagram.cpp \
-	NamedTreeNode.cpp
+	NamedTreeNode.cpp \
+	active_ptr.cpp \
+	Geom2.cpp \
+	Diagram2.cpp \
+	Font2.cpp \
+	Glyph2.cpp \
+	Polygon2.cpp \
+	Text2.cpp \
+	TreeRenderer2.cpp \
+	LineShapeRenderer2.cpp \
+	LineShapeGeometry2.cpp \
+	SunDiscRenderer2.cpp \
+	SunDiscGeometry2.cpp \
+	FallShapeRenderer2.cpp \
+	FallShapeGeometry2.cpp \
+	TreeGeometry2.cpp \
+	TextTreeGeometry2.cpp \
+	TreeNode2.cpp \
+	NamedTreeNode2.cpp
 
 libgenericglm_la_LIBADD =  \
 	$(FONTCONFIG_LIBS) \
@@ -100,7 +126,25 @@ pkginclude_HEADERS = \
 	TextTreeGeometry.hpp \
 	Buffer.hpp \
 	Diagram.hpp \
-	NamedTreeNode.hpp
+	NamedTreeNode.hpp \
+	active_ptr.hpp \
+	Geom2.hpp \
+	Diagram2.hpp \
+	Font2.hpp \
+	Glyph2.hpp \
+	Polygon2.hpp \
+	Text2.hpp \
+	TreeRenderer2.hpp \
+	LineShapeRenderer2.hpp \
+	LineShapeGeometry2.hpp \
+	SunDiscRenderer2.hpp \
+	SunDiscGeometry2.hpp \
+	FallShapeRenderer2.hpp \
+	FallShapeGeometry2.hpp \
+	TreeGeometry2.hpp \
+	TextTreeGeometry2.hpp \
+	TreeNode2.hpp \
+	NamedTreeNode2.hpp
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = genericglm.pc
