genericglm active_ptr correction

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,13 +5,17 @@ AM_CPPFLAGS = \
 	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)."\" \
 	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
+	$(GENERICIMG_CFLAGS) \
 	-I../src
 
 AM_CFLAGS= \
 	-Wall -Wpedantic
 
 AM_CXXFLAGS = \
-	-Wall -Wpedantic 
+	-Wall -Wpedantic
+
+check_LIBADD =  \
+	$(GENERICIMG_LIBS)
 
 check_PROGRAMS = ptr_test
 
