unified build (keep it dry)

--- a/configure.ac
+++ b/configure.ac
@@ -36,29 +36,45 @@ LT_INIT
 AC_CANONICAL_HOST
 AC_MSG_NOTICE([host_os $host_os])
 
-PKG_CHECK_MODULES(FONTCONFIG, [fontconfig])
+depend_fontconfig="fontconfig"
+AC_SUBST([depend_fontconfig])
+PKG_CHECK_MODULES(FONTCONFIG, [$depend_fontconfig])
 
 AC_ARG_WITH([gles], AS_HELP_STRING([--with-gles], [use openGL ES 3 (Raspi) otherweise fullgl]))
 
 if test "x$with_gles" = "xyes" ; then
     PKG_CHECK_MODULES(EPOXY,[glesv2], [AC_DEFINE([USE_GLES], [1], [Using openGL ES 3])])
+    depend_epoxy="glesv2"
 else
     PKG_CHECK_MODULES(EPOXY,[epoxy])
+    depend_epoxy="epoxy"
 fi
+AC_SUBST([depend_epoxy])
 
-PKG_CHECK_MODULES(GTKMM,gtkmm-3.0)
+depend_gtkmm="gtkmm-3.0"
+AC_SUBST([depend_gtkmm])
+PKG_CHECK_MODULES(GTKMM,$depend_gtkmm)
 
-PKG_CHECK_MODULES([GLIBMM], [glibmm-2.4 giomm-2.4])
+depend_glibmm="glibmm-2.4 giomm-2.4"
+AC_SUBST([depend_glibmm])
+PKG_CHECK_MODULES([GLIBMM], [$depend_glibmm])
 
-PKG_CHECK_MODULES([GLM], [glm])
+depend_glm="glm"
+AC_SUBST([depend_glm])
+PKG_CHECK_MODULES([GLM], [$depend_glm])
 
-PKG_CHECK_MODULES([GENERICIMG], [genericimg >= 0.3.1])
+depend_genericimg="genericimg >= 0.3.1"
+AC_SUBST([depend_genericimg])
+PKG_CHECK_MODULES([GENERICIMG], [$depend_genericimg])
 
 if test "$host_os" = "mingw32" ; then
     AC_SUBST(EXTRA_LDFLAGS, "-lglu32 -no-undefined")
+    depend_glu=""
 else
     PKG_CHECK_MODULES(GLU, [glu])
+    depend_glu="glu"
 fi
+AC_SUBST([depend_glu])
 
 AC_CONFIG_FILES([
 Makefile
