--- a/src/genericglm.pc.in
+++ b/src/genericglm.pc.in
@@ -9,5 +9,5 @@ Name: libgenericglm
 Description: Basic openGL rendering support lib.
 Version: @VERSION@
 Requires: @depend_fontconfig@ @depend_genericimg@ @depend_glu@
-Libs: -L${libdir} -lgenericglm
+Libs: -L${libdir} -lgenericglm @link_glu@
 Cflags: -I${includedir}
