genericglm, out of tree support

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,7 +6,7 @@ AM_CPPFLAGS = \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)."\" \
 	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
 	$(GENERICIMG_CFLAGS) \
-	-I../src
+	-I $(top_srcdir)/src
 
 AM_CFLAGS= \
 	-Wall -Wpedantic
