genericglm, added compile options

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,25 +12,35 @@ AM_CPPFLAGS = \
 	$(GLM_CFLAGS) \
 	$(EPOXY_CFLAGS)
 
-libgenericglm_la_CFLAGS = \
-	-Wall \
-	-Wextra \
-	-Wconversion \
-	-pedantic
 
 lib_LTLIBRARIES = libgenericglm.la
-
-# excluded unused as this gets annoying
-# not using -Wconversion as i did not make use of casts ...at the time it was feasible
-libgenericglm_la_CXXFLAGS = \
-	-Wall \
-	-Wextra \
-	-Wno-unused-parameter \
-	-pedantic
 
 libgenericglm_la_LDFLAGS = \
 	@EXTRA_LDFLAGS@ \
 	-version-info @version_info@
+
+# this is a no-tech approach,
+#  if you don't like gcc/clang, it this should also work without these options
+#  most options originate from https://github.com/cpp-best-practices/cmake_template/blob/main/cmake/Hardening.cmake
+#    -W... the usual warings
+#    GLIBC++ Assertions (vector[], string[], ...) enabled
+#    g++/clang -fstack-protector-strong enabled
+#    g++/clang -fcf-protection enabled
+#    undefined behaviour sanitizer
+if RELEASE
+libgenericglm_la_CXXFLAGS = -mtune=native -march=native -O3
+else
+libgenericglm_la_CFLAGS = -Wall
+libgenericglm_la_CXXFLAGS = -Wall \
+	    -Wextra \
+	    -Wno-unused-parameter \
+        -Wpedantic \
+        -D_GLIBCXX_ASSERTIONS \
+        -fstack-protector-strong \
+        -fcf-protection \
+        -fsanitize=undefined
+libgenericglm_la_LDFLAGS += -fsanitize=undefined
+endif
 
 libgenericglm_la_SOURCES = \
 	BaseDialog.cpp \
